--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container">
         <h1>下一步做什么？</h1>
-        <h2>当前时间：</h2>
-        <div id="time"></div>
-        <p id="showTime"></p>
+        <h5 id="current-time"></h5>
         <h3>人生总是面临太多选择，接下来该做什么呢？</h3>
         <ul>
             <li>中午吃什么？约会做什么？团建玩什么？好像有很多选择，但是又没有什么可以选？</li>
