--- a/pages/HomePage.html
+++ b/pages/HomePage.html
@@ -4,41 +4,20 @@
       <meta charset="UTF-8">
       <title>Lightly-HTML-Project</title>
       <link type="text/css" rel="stylesheet" href="../css/HomPage_Style.css"/>
-      <script type="text/javascript" src="../js/HomePage_Script.js"></script>
+      <script type="text/javascript" src="../js/HomPage_Script.js"></script>
   </head>
   
   <body>
-    <div class="container"> 
-        <form id="baidu_search_form">  
-           <input type="text" id="baidu_search_input" placeholder="Try it..." width="300px
-           "/>  
-           <button type="submit" id="baidu_search_button">Baidu</button>  
-        </form>
-   
-    
-  <div id="icons">  
-        <i class="icon fa fa-home" id="icon1" >
-          <img src="../img/icon/deep-sleep.png" >
-          </i>  
-        <i class="icon fa fa-user" id="icon2">
-          <img src="../img/icon/dinning.png">
-          </i>  
-        <i class="icon fa fa-shopping-cart" id="icon3">
-         <img src="../img/icon/drink.png">
-          </i>  
-    </div>  
 
+    <div class="container">
+        <div class="input-container">
+            <input type="text" id="userInput" placeholder="我准备">
+            <button id="submitButton" class="purple-button">提交</button>
+        </div>
+        <div class="output-container">
+            <div id="outputText"></div>
+        </div>
+    </div>
 
-
-
-    <h2>Label Click Counter</h2>
-
-<input type="text" id="labelInput" placeholder="Enter label text">
-
-<button id="countButton">Count</button>
-
-<div id="result"></div>
-
- </div>
   </body>
 </html>
