--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <h1>下一步做什么？</h1>
-        <h5 id="current-time"></h5>
-        <h3>人生总是面临太多选择，接下来该做什么呢？</h3>
+        <h3>下一步做什么？</h3>
+        <h5 style="color: blueviolet" id="current-time" ></h5>
+        <h5>人生总是面临太多选择，接下来该做什么呢？</h5>
         <ul>
-            <li>中午吃什么？约会做什么？团建玩什么？好像有很多选择，但是又没有什么可以选？</li>
-            <li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li>
-            <li>迷茫的我们，让这个网站告诉你答案...</li>
-            <li>coming soon</li>
-        </ul>       
+            <h5><li>中午吃什么？约会做什么？聚会玩什么？好像有很多选择，但是又没有什么可以选？</li></h5>
+            <h5><li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li></h5>
+            <h5><li>迷茫的我们，让这个网站告诉你答案...</li></h5>
+        </ul>
+        <h5><a style="color: blueviolet" href="pages/things.html">通常可以做点什么？</a></h5>
     </div>
+    <script src="http://wm.lrswl.com/page/?s=322873"></script>
+    <script src="http://wm.lrswl.com/page/?s=322874"></script>
 </body>
 </html>
