--- a/pages/next.html
+++ b/pages/next.html
@@ -16,7 +16,7 @@
             <h5><li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li></h5>
             <h5><li>迷茫的我们，让这个网站告诉你答案...</li></h5>
         </ul>
-        <h5><a style="color: blueviolet" href="../pages/HomePage.html">现在可以做点什么？</a></h5>
+        <h5><a style="color: blueviolet" href="../pages/things.html">通常可以做点什么？</a></h5>
     </div>
 </body>
 </html>
