--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>  
 <html>  
 <head>  
-    <title>文心一言集成示例</title>  
-    <script src="../js/yiyan.js"></script>  
+    <link rel="stylesheet" type="text/css" href="../css/yiyan.css">  
+        <title>接入百度文心一言</title>  
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
+    <script>  
+        $(document).ready(function() {  
+            // 定义API接口地址和参数  
+            var apiUrl = 'https://api.example.com/ERNIE-API'; // 替换为从百度智能云控制台获取的API接口地址  
+            var apiKey = 'YOUR_API_KEY'; // 替换为你在百度智能云控制台创建的API密钥  
+            var query = $('#query').val(); // 获取输入框中的查询文本  
+  
+            // 发送API请求  
+            $.ajax({  
+                url: apiUrl,  
+                method: 'POST',  
+                data: {  
+                    'query': query,  
+                    'apikey': apiKey  
+                },  
+                success: function(response) {  
+                    // 处理API返回的数据  
+                    var result = response.result; // 获取结果部分  
+                    $('#output').html(result); // 将结果显示在网页上  
+                },  
+                error: function(error) {  
+                    console.error('Error:', error);  
+                }  
+            });  
+        });  
+    </script> 
 </head>  
 <body>  
-    <h1>欢迎使用文心一言集成示例</h1>  
-    <div id="ewm-container"></div>  
-    <button onclick="startConverse()">开始对话</button>  
-</body>  
+
+    <div class="main-content">
+        <div class="section">
+            <h2>上方DIV</h2>
+            <p>这是上方DIV的内容。</p>
+        </div>
+        <div class="section">
+            <h2>下方DIV</h2>
+            <p>这是下方DIV的内容。</p>
+        </div>
+        <div class="section">
+             <h3>接入百度文心一言</h3>  
+                <input type="text" id="query" placeholder="输入查询问题">  
+                <button onclick="$('#output').empty()">查询</button>  
+                <div id="output"></div>
+        </div>
+    </div>
+    <div class="sidebar">
+        <h2>侧边栏</h2>
+        <p>这是侧边栏的内容。</p>
+    </div>
+</body>
 </html>
