--- a/pages/things.html
+++ b/pages/things.html
@@ -23,14 +23,14 @@ var _hmt = _hmt || [];
        <div class="container">
         <h3>大家都在做什么？</h3>
           <p>当前时间：<span id="currentTime"></span></p>
-          <p>多数人都在：<span id="popularThings"></span></p>
-          <button id="refreshButton">刷新</button> 
+          <p>多数人都在：<span id="popularThings"></span>
+          <button id="refreshButton">刷新</button></p> 
           <h3>大家都在做什么？</h3>
-          <p>努力的人都在：<span id="lizhiThings"></span></p>
-          <button id="refreshButton">刷新</button> 
+          <p>努力的人都在：<span id="lizhiThings"></span>
+          <button id="refreshButton">刷新</button></p> 
         
           <form id="recordForm">
-            <h3 for="activity">我正在做的事情：</h3>
+            <h3 for="activity">我正在做的事情：（不要超过128个字符）</h3>
             <input type="text" id="activity" maxlength="128" required>
             <button type="button" onclick="recordActivity()">提交</button>
         </form>
