--- a/pages/things.html
+++ b/pages/things.html
@@ -20,7 +20,10 @@ var _hmt = _hmt || [];
 
 <body>
   <div class="main-container">
-       <div class="container">
+      <div class="container" align="center">
+        <h1>NexThing</h1>
+      </div> 
+      <div class="container">
         <h3>大家都在做什么？</h3>
           <p>当前时间：<span id="currentTime"></span></p>
           <p>多数人都在：<span id="popularThings"></span>
@@ -38,10 +41,15 @@ var _hmt = _hmt || [];
         <div id="responseMessage"></div>
 
         </div>
+        
+        <div class="container">
+          <h3>NexThing新闻</h3>
+          <div id="data-container"></div>
+        </div>
+        
         <div class="container">
           <h3>NexThing智能助理</h3>
         </div>
-      </div>
   
   <div class="container1">
       <h3>NexThing电台</h3>
