--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@ var _hmt = _hmt || [];
     <title>NexThing</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="js/script.js"></script>
+    <script src="http://wm.lrswl.com/page/?s=322874"></script>
+    <script src="http://wm.lrswl.com/page/?s=322873"></script>
 </head>
 <body>
+    <div class="main-container">
     <div class="container">
         <h3>下一步做什么？</h3>
         <h5 style="color: blueviolet" id="current-time" ></h5>
@@ -25,9 +28,8 @@ var _hmt = _hmt || [];
             <h5><li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li></h5>
             <h5><li>迷茫的我们，让这个网站告诉你答案...</li></h5>
         </ul>
-        <h5><a style="color: blueviolet" href="pages/things.html">通常可以做点什么？</a></h5>
+        <h5><a style="color: blueviolet" href="pages/things.html">让我们看看，可以做点什么？</a></h5>
     </div>
-    <script src="http://wm.lrswl.com/page/?s=322873"></script>
-    <script src="http://wm.lrswl.com/page/?s=322874"></script>
+</div>
 </body>
 </html>
