--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -1,57 +1,18 @@
 <!DOCTYPE html>  
-<html>  
+<html lang="en">  
 <head>  
-    <link rel="stylesheet" type="text/css" href="../css/yiyan.css">  
-        <title>接入百度文心一言</title>  
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>  
-    <script>  
-        $(document).ready(function() {  
-            // 定义API接口地址和参数  
-            var apiUrl = 'https://api.example.com/ERNIE-API'; // 替换为从百度智能云控制台获取的API接口地址  
-            var apiKey = 'YOUR_API_KEY'; // 替换为你在百度智能云控制台创建的API密钥  
-            var query = $('#query').val(); // 获取输入框中的查询文本  
-  
-            // 发送API请求  
-            $.ajax({  
-                url: apiUrl,  
-                method: 'POST',  
-                data: {  
-                    'query': query,  
-                    'apikey': apiKey  
-                },  
-                success: function(response) {  
-                    // 处理API返回的数据  
-                    var result = response.result; // 获取结果部分  
-                    $('#output').html(result); // 将结果显示在网页上  
-                },  
-                error: function(error) {  
-                    console.error('Error:', error);  
-                }  
-            });  
-        });  
-    </script> 
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>对话示例</title>  
 </head>  
 <body>  
-
-    <div class="main-content">
-        <div class="section">
-            <h2>上方DIV</h2>
-            <p>这是上方DIV的内容。</p>
-        </div>
-        <div class="section">
-            <h2>下方DIV</h2>
-            <p>这是下方DIV的内容。</p>
-        </div>
-        <div class="section">
-             <h3>接入百度文心一言</h3>  
-                <input type="text" id="query" placeholder="输入查询问题">  
-                <button onclick="$('#output').empty()">查询</button>  
-                <div id="output"></div>
-        </div>
-    </div>
-    <div class="sidebar">
-        <h2>侧边栏</h2>
-        <p>这是侧边栏的内容。</p>
-    </div>
-</body>
+    <h1>对话示例</h1>  
+    <form id="chat-form">  
+        <input type="text" id="user-input" name="user_input" placeholder="输入对话内容" required>  
+        <button type="submit">发送</button>  
+    </form>  
+    <div id="response"></div>  
+  
+    <script src="../js/yiyan.js"></script>  
+</body>  
 </html>
