--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -3,16 +3,53 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>对话示例</title>  
+    <title>NexThing 智能AI助理</title>  
+    <link type="text/css" rel="stylesheet" href="../css/style.css"/>  
+    <style>  
+        #user-input {  
+            width: 100%; /* Make sure the textarea is full width */  
+            height: 150px; /* Specify a height for the textarea */  
+        }  
+    </style>  
 </head>  
 <body>  
-    <h1>对话示例</h1>  
-    <form id="chat-form">  
-        <input type="text" id="user-input" name="user_input" placeholder="输入对话内容" required>  
-        <button type="submit">发送</button>  
-    </form>  
-    <div id="response"></div>  
+<div class="main-container">  
+    <div class="container"  align="center">
+        <h1>NexThing 智能 AI 助理</h1>
+        <h3>基于百度 文心一言</h3>
+        <p>作为你的智能AI助理，我既能写文案，想点子，又能陪你聊天、答疑解惑。</p>
+        <p>快来试着问问我关于你的日程要怎么来规划吧，每天1分钟，帮你安排合理日程。</p>
+    </div>
+    <div class="container" id="chat-container">  
+        <div id="chat-box"></div>  
+        <textarea id="user-input" placeholder="我当前时间做什么好？请直接说出你的建议。。。" rows="4"></textarea>  
+        <button onclick="sendMessage()">问问看</button>  
+    </div>  
+</div>  
+<script>  
+    function sendMessage() {  
+        var userInput = document.getElementById('user-input').value;  
+        var chatBox = document.getElementById('chat-box');  
   
-    <script src="../js/yiyan.js"></script>  
+        // Display user's message  
+        chatBox.innerHTML += '<div>User: ' + userInput + '</div>';  
+  
+        // Call PHP backend to interact with the chat API  
+        var xhr = new XMLHttpRequest();  
+        xhr.open("POST", "../php/yiyan.php", true);  
+        xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");  
+        xhr.onreadystatechange = function () {  
+            if (xhr.readyState === 4 && xhr.status === 200) {  
+                // Display AI's response  
+                chatBox.innerHTML += '<div>AI: ' + xhr.responseText + '</div>';  
+            }  
+        };  
+        xhr.send("userInput=" + userInput);  
+          
+        // Clear the textarea after sending the message  
+        document.getElementById('user-input').value = "";  
+    }  
+</script>  
+  
 </body>  
 </html>
