--- a/pages/HomePage.html
+++ b/pages/HomePage.html
@@ -21,5 +21,14 @@
         <!-- 删除 chartBar 元素，将柱状图以 CSS 方式处理 -->
     </div>
     </div>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
   </body>
 </html>
