--- a/pages/lizhi.html
+++ b/pages/lizhi.html
@@ -13,5 +13,14 @@
           <p>多数人都在：<span id="popularThings"></span></p>
           <button id="refreshButton">刷新</button> 
     </div>  
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
   </body>
 </html>
