--- a/pages/loginadmin.html
+++ b/pages/loginadmin.html
@@ -17,6 +17,15 @@
     <p id="loginMessage"></p>
 
     <script src="../js/login.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
   </div>
 </body>
 </html>
