--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -11,6 +11,15 @@
             height: 150px; /* Specify a height for the textarea */  
         }  
     </style>  
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
 </head>  
 <body>  
 <div class="main-container">  
