--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -5,6 +5,15 @@
      <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="js/script.js"></script>
     <title>基础日历</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
 </head>  
 <body> 
     <div class='clock'> 
