--- a/pages/seniorthing.html
+++ b/pages/seniorthing.html
@@ -8,6 +8,15 @@
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <!-- 引入外部的JavaScript文件，该文件包含用于获取和显示数据的代码 -->  
     <script src="https://www.nexthing.cc/js/seniorthing.js" defer></script>  
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
 </head>  
 <body>  
     <div class="main-container">
