--- a/pages/things.html
+++ b/pages/things.html
@@ -130,5 +130,14 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
 </body>
 </html>
