--- a/404.html
+++ b/404.html
@@ -1,6 +1,25 @@
 <html>
-<head><title>404 Not Found</title></head>
+<head>
+    <title>404 Not Found</title>
+    <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-12JNTQ6LCS');
+</script>
+</head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7115244402517644">
+</amp-auto-ads>
 <center><h1>404 Not Found</h1></center>
 <hr><center>nginx</center>
 </body>
