--- a/index.html
+++ b/index.html
@@ -1,35 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-        <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?2d8c330e76a8c66771dbe6e73ef3694a";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
     <meta charset="UTF-8">
-    <title>NexThing</title>
+    <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <link rel="icon" href="../img/Group 1.png">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">
+    <title>NexThing - 发现下一步</title>
+    <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+    </script>
+
+    <!-- Baidu Analytics -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?2d8c330e76a8c66771dbe6e73ef3694a";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-12JNTQ6LCS');
+    </script>
+
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <script type="text/javascript" src="js/script.js"></script>
-    <script src="http://wm.lrswl.com/page/?s=322874"></script>
-    <script src="http://wm.lrswl.com/page/?s=322873"></script>
+
+    <!-- Replace "http" with "https" for external scripts -->
+    <script src="https://wm.lrswl.com/page/?s=322874"></script>
+    <script src="https://wm.lrswl.com/page/?s=322873"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644"
+     crossorigin="anonymous"></script>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7115244402517644">
+    </amp-auto-ads>
     <div class="main-container">
-    <div class="container">
-        <h3>下一步做什么？</h3>
-        <h5 style="color: blueviolet" id="current-time" ></h5>
-        <h5>人生总是面临太多选择，接下来该做什么呢？</h5>
-        <ul>
-            <h5><li>中午吃什么？约会做什么？聚会玩什么？好像有很多选择，但是又没有什么可以选？</li></h5>
-            <h5><li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li></h5>
-            <h5><li>迷茫的我们，让这个网站告诉你答案...</li></h5>
-        </ul>
-        <h5><a style="color: blueviolet" href="pages/things.html">让我们看看，可以做点什么？</a></h5>
+        <div class="container">
+            <h1>下一步做什么？</h1>
+            <h2 style="color: blueviolet" id="current-time" ></h2>
+            <h2>人生总是面临太多选择，接下来该做什么呢？</h2>
+            <ul>
+                <h5><li>中午吃什么？约会做什么？聚会玩什么？好像有很多选择，但是又没有什么可以选？</li></h5>
+                <h5><li>接下来要做什么？还有什么需要我必须马上做？这么多事情我先做哪一个？</li></h5>
+                <h5><li>迷茫的我们，让这个网站告诉你答案...</li></h5>
+            </ul>
+            <h2><a style="color: blueviolet" href="pages/things.html">让我们看看，可以做点什么？</a></h2>
+        </div>
+        <div class="container">
+            <h2>关于我们</h2>
+            <p>你好，我是Tim。这是我一个人通过不同的AI引擎，自动化生成的网站。</p>
+            <p>旨在无时无刻提示你还有什么事情可以做，感谢你的支持！</p>
+            <a href="https://timshu.cn/" target="_blank">联系或打赏</a>
+        </div>
     </div>
-</div>
 </body>
 </html>
