--- a/pages/NexThing_weibo.html
+++ b/pages/NexThing_weibo.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <link rel="icon" href="../img/Group 1.png">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">
     <title>NexThing微博热榜</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script src="http://wm.lrswl.com/page/s.php?s=322927&w=468&h=60"></script>
@@ -16,6 +19,8 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644"
+    crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-12JNTQ6LCS"></script>
 <script>
@@ -25,8 +30,14 @@
 
   gtag('config', 'G-12JNTQ6LCS');
 </script>
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body>
+    <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-7115244402517644">
+</amp-auto-ads>
     <div class="main-container">
         <div class="container">
             <div align="center">
