--- a/pages/SQL.html
+++ b/pages/SQL.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>  
 <html>  
 <head>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
+    <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">  
     <title>数据库操作</title>  
     <script>
 var _hmt = _hmt || [];
