--- a/pages/lizhi.html
+++ b/pages/lizhi.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">
     <title>NexThing</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script type="text/javascript" src="../js/things.js"></script>
