--- a/pages/clock.html
+++ b/pages/clock.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+  <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <meta name="google-adsense-account" content="ca-pub-7115244402517644">
 <style>
 .timer {
   font-family: Arial, Helvetica, sans-serif;
