--- a/pages/things.html
+++ b/pages/things.html
@@ -134,6 +134,11 @@
             <p>旨在无时无刻提示你还有什么事情可以做，感谢你的支持！</p>
             <a href="https://timshu.cn/" target="_blank">联系或打赏</a>
         </div>
+        <!-- 提示框 -->
+<div id="homepagePrompt" class="container">
+    <p>是否将该页面设置为浏览器主页？</p>
+    <button id="setHomepageBtn">设置主页</button>
+</div>
         <amp-ad width="100vw" height="320"
      type="adsense"
      data-ad-client="ca-pub-7115244402517644"
