--- a/pages/NexThing_news.html
+++ b/pages/NexThing_news.html
@@ -41,7 +41,9 @@
     <div class="main-container">
         <div class="container">
             <div align="center">
+                <a href="../pages/things.html" target="_self">
             <h1>NexThing微信热点</h1>
+                </a>
             <h3>微信热点文章 </h3>
         </div>
             <div id="news-container"></div>
