--- a/pages/NexThing_toutiao.html
+++ b/pages/NexThing_toutiao.html
@@ -32,7 +32,9 @@
     <div class="main-container">
         <div class="container">
             <div align="center">
+                <a href="../pages/things.html" target="_self">
             <h1>NexThing头条新闻</h1>
+                </a>
             <h3>来自头条热搜新闻</h3>
         </div>
             <div id="data-container"></div>
