--- a/pages/NexThing_weibo.html
+++ b/pages/NexThing_weibo.html
@@ -41,7 +41,9 @@
     <div class="main-container">
         <div class="container">
             <div align="center">
+                <a href="../pages/things.html" target="_self">
             <h1>NexThing微博热榜</h1>
+            </a>
             <h3>来自微博热榜--看看就行了</h3>
         </div>
             <div id="data-container"></div>
