--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -52,7 +52,9 @@
     </amp-auto-ads>  
     <div class="main-container">  
         <div class="container"  align="center">
+            <a href="../pages/things.html" target="_self">
             <h1>NexThing 智能 AI 助理</h1>
+            </a>
             <h3>基于百度 文心一言</h3>
             <p>作为你的智能AI助理，我既能写文案，想点子，又能陪你聊天、答疑解惑。</p>
             <p>快来试着问问我关于你的日程要怎么来规划吧，每天1分钟，帮你安排合理日程。</p>
