--- a/index_back.html
+++ b/index_back.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
+    <meta name="keywords" content="做什么,吃什么,玩什么,学习,工作,娱乐,电影,短视频,新闻">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
     <title>NexThing</title>
     <link type="text/css" rel="stylesheet" href="css/style.css"/>
