--- a/pages/NexThing_radio.html
+++ b/pages/NexThing_radio.html
@@ -41,7 +41,9 @@
     <div class="main-container">
         <div class="container">
             <div align="center">
+                <a href="../pages/things.html" target="_self">
             <h1>NexThing电台</h1>
+                </a>
             <h3>来自喜马拉雅最热门的声音</h3>
         </div>
             <div align="center">
