--- a/pages/NexThing_toutiaonews.html
+++ b/pages/NexThing_toutiaonews.html
@@ -32,7 +32,9 @@
     <div class="main-container">
         <div class="container">
             <div align="center">
+                <a href="../pages/things.html" target="_self">
                 <h1>NexThing头条热点</h1>
+                </a>
                 <h3>来自今日头条热点新闻--知天下事</h3>
             </div>
             <div id="news-container"></div>
