--- a/pages/NexThing_toutiao.html
+++ b/pages/NexThing_toutiao.html
@@ -7,7 +7,7 @@
     <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
     <link rel="icon" href="../img/Group 1.png">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
-    <title>NexThing头条新闻</title>
+    <title>NexThing：探索未来，下一步行动指南，头条新闻</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script src="http://wm.lrswl.com/page/s.php?s=322927&w=468&h=60"></script>
     <script>
