--- a/pages/seniorthing.html
+++ b/pages/seniorthing.html
@@ -7,7 +7,7 @@
     <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
     <link rel="icon" href="../img/Group 1.png">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">  
-    <title>NexThing--接下来做什么？</title>  
+    <title>NexThing：探索未来，下一步行动指南--AI日程</title>  
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <!-- 引入外部的JavaScript文件，该文件包含用于获取和显示数据的代码 -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
