--- a/pages/things.html
+++ b/pages/things.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="做什么,吃什么,玩什么,学习,工作,娱乐,电影,短视频,新闻">
     <link rel="icon" href="../img/Group 1.png">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
-    <title>NexThing--接下来做什么？</title>
+    <title>NexThing：探索未来，下一步行动指南</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644"
      crossorigin="anonymous"></script>
