--- a/pages/police.html
+++ b/pages/police.html
@@ -7,7 +7,7 @@
     <meta name="description" content="发现生活中下一步该做什么。为您提供午餐、约会等建议。让这个基于AI的网站指导您做出决策。">
     <link rel="icon" href="../img/Group 1.png">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
-    <title>NexThing--接下来做什么？</title>
+    <title>NexThing：探索未来，下一步行动指南，用户隐私条款</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644"
      crossorigin="anonymous"></script>
