--- a/pages/pomodoro_timer.html
+++ b/pages/pomodoro_timer.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="番茄钟,番茄时钟,番茄计时器,网页版">
     <link rel="icon" href="../img/Group 1.png">
     <meta name="google-adsense-account" content="ca-pub-7115244402517644">
-    <title>NexThing--Pomodoro Timer</title>
+    <title>NexThing：探索未来，下一步行动指南--番茄时钟</title>
     <link type="text/css" rel="stylesheet" href="../css/style.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7115244402517644" crossorigin="anonymous"></script>
     <script async custom-element="amp-auto-ads"src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
